resolvendo problema 1048, refatorando e aplicando clean code.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Algoritmos\Algoritmos.csproj" />
+  </ItemGroup>
+
 </Project>
