--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Algoritmos\Algoritmos.csproj" />
+    <ProjectReference Include="..\algorithms\algorithms.csproj" />
   </ItemGroup>
 
 </Project>
